feat: add manual host toggle and player count in Bedrock hub/registry

--- a/src/renderer/bedrock-hub.html
+++ b/src/renderer/bedrock-hub.html
@@ -31,7 +31,8 @@
       </div>
       <div class="hint" id="hostStatus">Проверка Bedrock...</div>
       <div class="row">
-        <button class="btn acc" id="btnOpenWorld">Открыть мир</button>
+        <button class="btn acc" id="btnHostToggle">Хост: OFF</button>
+        <button class="btn" id="btnOpenWorld">Открыть мир</button>
         <button class="btn" id="btnRefresh">Обновить</button>
       </div>
       <div class="list" id="servers"></div>
