feat: add diagnostics, privacy modes, path picker, connectivity checks, and invite revoke

--- a/src/renderer/bedrock-hub.html
+++ b/src/renderer/bedrock-hub.html
@@ -37,10 +37,16 @@
         <button class="btn" id="btnRefresh">Обновить</button>
       </div>
       <div class="row">
+        <button class="btn" id="btnVisibility">Приватность: public</button>
+        <button class="btn" id="btnPickBedrockPath">Путь Bedrock</button>
+      </div>
+      <div class="row">
         <input id="inviteCode" placeholder="Код приглашения (например ABCD12)" style="flex:1;background:rgba(255,255,255,.08);border:1px solid var(--stroke);border-radius:10px;color:#fff;padding:6px 8px;" />
         <button class="btn" id="btnJoinByCode">Войти по коду</button>
+        <button class="btn" id="btnRevokeInvite">Отозвать</button>
       </div>
       <div class="hint" id="inviteStatus"></div>
+      <div class="hint" id="diagStatus"></div>
       <div class="list" id="servers"></div>
     </div>
   </div>
