--- a/src/renderer/bedrock-hub.html
+++ b/src/renderer/bedrock-hub.html
@@ -54,6 +54,7 @@
       <div class="row">
         <button class="btn" id="btnVisibility">Приватность: public</button>
         <button class="btn" id="btnPickBedrockPath">Путь Bedrock</button>
+        <button class="btn" id="btnStreamer">Стример-режим: OFF</button>
       </div>
       <div class="row">
         <input id="inviteCode" placeholder="Код приглашения" style="flex:1;background:rgba(255,255,255,.08);border:1px solid var(--line);border-radius:10px;color:#fff;padding:7px 8px;" />
