style: apply custom UI background image for Bedrock multiplayer hub

--- a/src/renderer/bedrock-hub.html
+++ b/src/renderer/bedrock-hub.html
@@ -9,7 +9,7 @@
     *{box-sizing:border-box}
     body{margin:0;background:transparent;color:var(--txt);font-family:Segoe UI,Inter,Arial}
     .wrap{padding:8px}
-    .shell{background:var(--bg);border:1px solid rgba(0,0,0,.25);border-radius:14px;padding:10px;box-shadow:0 8px 28px rgba(0,0,0,.35)}
+    .shell{background:linear-gradient(180deg,rgba(35,42,66,.62),rgba(35,42,66,.72)), url('./img/hub-bg.png') center/cover no-repeat; border:1px solid rgba(0,0,0,.25);border-radius:14px;padding:10px;box-shadow:0 8px 28px rgba(0,0,0,.35)}
 
     .hero{display:grid;grid-template-columns:52px 1fr auto;gap:10px;align-items:center;background:rgba(255,255,255,.03);border:1px solid var(--line);border-radius:12px;padding:8px}
     .mcIcon{width:52px;height:52px;border-radius:10px;background:linear-gradient(180deg,#7ad35a,#4ca93a);display:grid;place-items:center;font-weight:900;color:#17340f}
