feat: production hardening pass with transport policy, routing, and relay session controls

--- a/src/renderer/bedrock-hub.html
+++ b/src/renderer/bedrock-hub.html
@@ -53,6 +53,7 @@
       </div>
       <div class="row">
         <button class="btn" id="btnVisibility">Приватность: public</button>
+        <button class="btn" id="btnTransport">Транспорт: auto</button>
         <button class="btn" id="btnPickBedrockPath">Путь Bedrock</button>
         <button class="btn" id="btnStreamer">Стример-режим: OFF</button>
       </div>
