feat: add Bedrock Settings button on main card and boolean ON/OFF toggles

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -127,6 +127,7 @@
                     <button class="btnPrimary" id="btnBedrockAction" type="button">Проверка…</button>
                     <button class="chip chipSmall" id="btnBedrockVersions" type="button">Версии</button>
                     <button class="chip chipSmall" id="btnBedrockUninstall" type="button">Удалить</button>
+                    <button class="chip chipSmall" id="btnBedrockSettings" type="button">Настройки</button>
                   </div>
                 </div>
 
