feat: add Bedrock 'Addons' button opening embedded MCPEDL window

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -129,6 +129,7 @@
                     <button class="chip chipSmall" id="btnBedrockUninstall" type="button">Удалить</button>
                     <button class="chip chipSmall" id="btnBedrockSettings" type="button">Настройки</button>
                     <button class="chip chipSmall" id="btnBedrockLibrary" type="button">Библиотека</button>
+                    <button class="chip chipSmall" id="btnBedrockAddons" type="button">Дополнения</button>
                   </div>
                 </div>
 
