--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -131,6 +131,7 @@
                     <button class="chip chipSmall" id="btnBedrockLibrary" type="button">Библиотека</button>
                     <button class="chip chipSmall" id="btnBedrockAddons" type="button">Дополнения</button>
                     <button class="chip chipSmall" id="btnBedrockMsFix" type="button">MS Fix</button>
+                    <button class="chip chipSmall" id="btnBedrockXboxFix" type="button">Xbox Fixer</button>
                   </div>
                 </div>
 
