--- a/src/renderer/splash.html
+++ b/src/renderer/splash.html
@@ -42,9 +42,9 @@
       box-shadow: inset 0 0 0 1px rgba(47,191,84,.06);
       position: relative;
       z-index: 2;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      gap: 14px;
     }
 
     .brand{
@@ -95,28 +95,53 @@
       100%{ transform: translateX(240%); }
     }
 
+    .centerPromo{
+      align-self: center;
+      justify-self: center;
+      width: min(900px, calc(100vw - 80px));
+      padding: 22px 24px;
+      border-radius: 20px;
+      background: linear-gradient(180deg, rgba(0,0,0,.30), rgba(0,0,0,.22));
+      border: 1px solid rgba(255,255,255,.18);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 18px 48px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.12);
+      text-align: center;
+      display: grid;
+      gap: 10px;
+      place-items: center;
+    }
+
+    .status{
+      color: rgba(255,255,255,.98);
+      font-size: clamp(18px, 2.1vw, 30px);
+      font-weight: 900;
+      line-height: 1.28;
+      text-shadow: 0 2px 12px rgba(0,0,0,.4);
+      max-width: 92%;
+      animation: textPulse 700ms var(--ease);
+    }
+
+    .small{
+      color: rgba(180,255,208,.92);
+      font-size: 12px;
+      letter-spacing: .13em;
+      text-transform: uppercase;
+      font-weight: 800;
+    }
+
     .launchPanel{
       width: min(920px, calc(100vw - 44px));
       align-self: center;
-      padding: 14px 16px 12px;
+      padding: 12px 16px 10px;
       border-radius: 14px;
       background: rgba(0,0,0,.30);
       border: 1px solid rgba(255,255,255,.16);
       backdrop-filter: blur(5px);
     }
 
-    .status{
-      margin-top: 10px;
-      color: rgba(255,255,255,.90);
-      font-size: 12px;
-    }
-
-    .small{
-      margin-top: 8px;
-      color: rgba(255,255,255,.70);
-      font-size: 11px;
-      letter-spacing: .06em;
-      text-transform: uppercase;
+    @keyframes textPulse {
+      0% { opacity: .35; transform: translateY(5px) scale(.99); }
+      100% { opacity: 1; transform: translateY(0) scale(1); }
     }
 
     .sakura{
@@ -156,10 +181,13 @@
       </div>
     </div>
 
+    <div class="centerPromo">
+      <div class="small">NocLauncher • Startup</div>
+      <div class="status" id="status">Лучший стабильный выбор, без вирусов и вреда для вашего компьютера.</div>
+    </div>
+
     <div class="launchPanel">
       <div class="barWrap" aria-hidden="true"><div class="bar"></div></div>
-      <div class="status" id="status">Загрузка модулей…</div>
-      <div class="small">loading</div>
     </div>
   </div>
 
@@ -205,6 +233,10 @@
       let i = 0;
       setInterval(() => {
         i = (i + 1) % lines.length;
+        el.style.animation = 'none';
+        // force reflow for replay
+        void el.offsetWidth;
+        el.style.animation = '';
         el.textContent = lines[i];
       }, 1900);
     })();
