--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -134,6 +134,7 @@
                     <button class="chip chipSmall" id="btnBedrockMsFix" type="button">MS Fix</button>
                     <button class="chip chipSmall" id="btnBedrockXboxFix" type="button">Xbox Fixer</button>
                     <button class="chip chipSmall" id="btnBedrockVirusCheck" type="button">Проверка на вирусы</button>
+                    <button class="chip chipSmall" id="btnBedrockSkinsSite" type="button">Скачать скины</button>
                   </div>
                 </div>
 
