feat: add deep Microsoft Store repair flow to MS Fix wizard

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -555,12 +555,13 @@
             <div class="hrow" style="gap:8px; flex-wrap:wrap; margin-top:8px;">
               <button class="btn mini" id="btnMsFixDiag" type="button">1) Диагностика</button>
               <button class="btn mini" id="btnMsFixAuto" type="button">2) Авто-фикс</button>
-              <button class="btn mini ghost" id="btnMsFixStoreUpdates" type="button">3) Store: обновления</button>
-              <button class="btn mini ghost" id="btnMsFixXboxApp" type="button">4) Установить Xbox app</button>
-              <button class="btn mini ghost" id="btnMsFixGamingServices" type="button">5) Установить Gaming Services</button>
-              <button class="btn mini ghost" id="btnMsFixMinecraftStore" type="button">6) Открыть Minecraft в Store</button>
-              <button class="btn mini ghost" id="btnMsFixXboxNetworking" type="button">7) Xbox Networking</button>
-              <button class="btn mini" id="btnMsFixReboot" type="button">8) Перезагрузить ПК</button>
+              <button class="btn mini" id="btnMsFixStoreDeep" type="button">3) Глубокий ремонт Store</button>
+              <button class="btn mini ghost" id="btnMsFixStoreUpdates" type="button">4) Store: обновления</button>
+              <button class="btn mini ghost" id="btnMsFixXboxApp" type="button">5) Установить Xbox app</button>
+              <button class="btn mini ghost" id="btnMsFixGamingServices" type="button">6) Установить Gaming Services</button>
+              <button class="btn mini ghost" id="btnMsFixMinecraftStore" type="button">7) Открыть Minecraft в Store</button>
+              <button class="btn mini ghost" id="btnMsFixXboxNetworking" type="button">8) Xbox Networking</button>
+              <button class="btn mini" id="btnMsFixReboot" type="button">9) Перезагрузить ПК</button>
             </div>
             <div class="list" id="bedrockMsFixLog" style="margin-top:10px; max-height:260px;"></div>
             <div class="help">Рекомендуемый сценарий: Диагностика → Авто-фикс → Store обновления → Перезагрузка ПК.</div>
