show launcher version v1.0.5 in main menu branding

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -19,7 +19,7 @@
             <div class="sbBrand" aria-label="NocLauncher">
               <div class="sbLogo" aria-hidden="true">N</div>
               <div class="sbBrandTxt">
-                <div class="sbName">NocLauncher</div>
+                <div class="sbName">NocLauncher v1.0.5</div>
                 <div class="sbSub">Всегда рады вас видеть!</div>
               </div>
             </div>
@@ -102,7 +102,7 @@
               </div>
 
               <div class="heroContent">
-                <div class="heroBadge">NocLauncher</div>
+                <div class="heroBadge">NocLauncher v1.0.5</div>
                 <div class="heroH1">Играй с комфортом</div>
                 <div class="heroP">Выбери версию, лоадер и нажми кнопку <b>ИГРАТЬ</b> внизу.</div>
 
