move new/old version picker to addons modal and restore versions button behavior

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -782,6 +782,21 @@
         </div>
       </div>
 
+      <div class="modal hidden" id="modalVersionToolPick" role="dialog" aria-modal="true" aria-label="Выбор версий Bedrock">
+        <div class="modalCard" style="max-width:420px;">
+          <div class="modalHead">
+            <div class="modalTitle">Выбор версий Bedrock</div>
+            <button class="iconBtn" id="btnCloseVersionToolPick" type="button" aria-label="Закрыть">✕</button>
+          </div>
+          <div class="form">
+            <div class="hrow" style="gap:10px; flex-wrap:wrap;">
+              <button class="chip" id="btnVersionToolNew" type="button">Новые версии</button>
+              <button class="chip" id="btnVersionToolOld" type="button">Старые версии</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
   </div>
 
