feat: add detailed animated feature cards section for launcher capabilities

--- a/landing/index.html
+++ b/landing/index.html
@@ -86,6 +86,31 @@
       </div>
     </section>
 
+    <section class="section reveal">
+      <h2>Возможности NocLauncher — подробно</h2>
+      <div class="feature-grid">
+        <article class="feature-card"><h3>Выбор любых версий</h3><p>Запускай нужные версии прямо из лаунчера: от стабильных релизов до нужных сборок под конкретные сервера и модпаки.</p></article>
+        <article class="feature-card"><h3>497+ конфигураций Bedrock</h3><p>Глубокая настройка Bedrock-параметров: управление поведением клиента, гибкая персонализация и удобная работа через интерфейс.</p></article>
+        <article class="feature-card"><h3>Управление библиотекой</h3><p>Импортируй и веди контент в одном месте. Поддержка форматов <b>.mcworld</b>, <b>.mcpack</b>, <b>.mcaddon</b> для быстрого добавления миров, ресурсов и аддонов.</p></article>
+        <article class="feature-card"><h3>Кнопка «Дополнения»</h3><p>Встроенные сайты с установкой модов/карт/аддонов — достаточно открыть раздел, выбрать нужный источник и поставить контент в пару кликов.</p></article>
+        <article class="feature-card"><h3>MS Fix</h3><p>Инструмент для исправления типичных проблем запуска/сервисов Microsoft, которые мешают Bedrock и связанным компонентам.</p></article>
+        <article class="feature-card"><h3>XboxFixer</h3><p>Отдельный фикс для проблем Xbox-служб и авторизации: помогает восстановить корректную работу окружения без ручного копания в системе.</p></article>
+        <article class="feature-card"><h3>Проверка на вирусы</h3><p>Простой сценарий: выбирай удобный антивирусный сайт, загружай нужные файлы и проверяй безопасность перед использованием.</p></article>
+        <article class="feature-card"><h3>Скачать скины</h3><p>Кнопка ведёт на удобный сайт с загрузкой скинов для Minecraft — быстро находи и скачивай подходящие варианты.</p></article>
+        <article class="feature-card"><h3>Эксперименты</h3><p>Тестовые функции для продвинутых пользователей. Важно: всё, что включается/отключается в этом разделе, используется на ваш риск.</p></article>
+        <article class="feature-card"><h3>Лицензия и открытый код</h3><p>Лаунчер лицензирован, а исходный код открыт и доступен на GitHub — прозрачно, проверяемо и честно по отношению к пользователю.</p></article>
+        <article class="feature-card"><h3>Java + Forge + OptiFine</h3><p>Скачивай нужные версии Java, используй поддержку Forge и OptiFine, собирай конфигурацию под свои задачи и производительность.</p></article>
+        <article class="feature-card"><h3>Память и рекомендации ПК</h3><p>Гибкая настройка RAM: для слабых ПК — умеренные значения, для средних — сбалансированные, для мощных — повышенные лимиты.</p></article>
+        <article class="feature-card"><h3>Скорость загрузки</h3><p>Режимы <b>Обычная</b>, <b>Быстрая</b>, <b>Турбо</b>: от стабильной экономичной загрузки до максимальной скорости установки файлов.</p></article>
+        <article class="feature-card"><h3>Параллельность</h3><p>Управляет количеством одновременных операций скачивания/обработки. Выше — быстрее, но больше нагрузка на диск/CPU/сеть.</p></article>
+        <article class="feature-card"><h3>JVM пресеты</h3><p>Готовые наборы JVM-параметров под разные сценарии: стабильность, производительность или универсальный режим.</p></article>
+        <article class="feature-card"><h3>Безопасный запуск без модов</h3><p>Позволяет стартовать «чисто» для диагностики конфликтов — удобно, когда нужно быстро понять, что ломает запуск.</p></article>
+        <article class="feature-card"><h3>Анимированный фон</h3><p>Визуальные эффекты интерфейса включаются в пару кликов, чтобы сделать лаунчер более живым и приятным без потери удобства.</p></article>
+        <article class="feature-card"><h3>Закрывать лаунчер после старта</h3><p>Опция для экономии ресурсов: после запуска игры лаунчер автоматически закрывается и не держит лишнюю нагрузку в фоне.</p></article>
+        <article class="feature-card"><h3>Снимки (Snapshots)</h3><p>Поддержка тестовых версий для тех, кто хочет пробовать новые функции Minecraft раньше официального стабильного релиза.</p></article>
+      </div>
+    </section>
+
     <section id="cta" class="section final reveal">
       <h2>Готов запускаться?</h2>
       <p>Скачай свежий релиз и попробуй NocLauncher в деле.</p>
